fixed footer to be responsive on small devices

--- a/style.css
+++ b/style.css
@@ -69,6 +69,41 @@ li {
   height: 100%;
   display: flex;
   min-width: 100%;
+  position: sticky;
+}
+
+#top-header {
+  margin: 0;
+  padding: 0;
+}
+
+.scroller {
+  background-color: red;
+  width: 100%;
+  display: flex;
+  height: auto;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 100;
+  transition: 0.3s;
+}
+
+.scroller .head-logo {
+  width: 300px;
+  margin: 0;
+  padding-left: 10px;
+}
+
+.scroller .header-buttons {
+  position: absolute;
+  z-index: 1;
+  right: 20px;
+  padding-top: 10px;
+}
+
+.scroller .header-buttons .menu {
+  padding-left: 5px;
 }
 
 .trend-nav-wrapper .trend {
@@ -748,6 +783,15 @@ footer {
   position: absolute;
   left: 244px;
   bottom: 0;
+}
+
+@media (max-width: 768px) {
+  .top-footer .copyright {
+    display: block;
+    position: relative;
+    margin: 0;
+    left: 0;
+  }
 }
 
 .top-footer .foot-logo svg {
